syntax = "proto3";

package yandex.cloud.priv.cloudrouter.v1.inner.service;

import "yandex/cloud/api/operation.proto";
import "google/protobuf/field_mask.proto";

import "yandex/cloud/priv/operation/operation.proto";
import "yandex/cloud/priv/validation.proto";

import "yandex/cloud/priv/cloudrouter/v1/inner/service/routing_instance.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/cloudrouter/v1/inner/service;cloudrouter";
option java_outer_classname = "CRRIS";

service RoutingInstanceService {

  rpc Get (GetRoutingInstanceRequest) returns (RoutingInstance);

  rpc List (ListRoutingInstanceRequest) returns (ListRoutingInstanceResponse);

  rpc Create (RoutingInstance) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreateRoutingInstanceMetadata"
      response: "RoutingInstance"
    };
  }

  rpc Update (UpdateRoutingInstanceRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateRoutingInstanceMetadata"
      response: "RoutingInstance"
    };
  }

  rpc Delete (DeleteRoutingInstanceRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteRoutingInstanceMetadata"
      response: "google.protobuf.Empty"
    };
  }

  rpc ListOperations (ListRoutingInstanceOperationsRequest) returns (ListRoutingInstanceOperationsResponse);
}

message GetRoutingInstanceRequest {
  string routing_instance_id = 1 [(required) = true, (length) = "<=50"];
}

message ListRoutingInstanceRequest {
  string folder_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
  string filter = 4;
}

message ListRoutingInstanceResponse {
  repeated RoutingInstance routing_instances = 1;
  string next_page_token = 2;
}

message UpdateRoutingInstanceRequest {
  string routing_instance_id = 1  [(required) = true, (length) = "<=50"];
  google.protobuf.FieldMask update_mask = 2;
  string name = 3;
  string description = 4;
  string cloud_id = 5;
  string folder_id = 6;
  string region_id = 7;
  repeated RoutingInstance.VpcInfo vpc_info = 8;
  repeated RoutingInstance.CicPrivateConnectionInfo cic_private_connection_info = 9;
}

message CreateRoutingInstanceMetadata {
  string routing_instance_id = 1;
}

message UpdateRoutingInstanceMetadata {
  string routing_instance_id = 1;
}

message DeleteRoutingInstanceRequest {
  string routing_instance_id = 1 [(required) = true, (length) = "<=50"];
}

message DeleteRoutingInstanceMetadata {
  string routing_instance_id = 1;
}

message ListRoutingInstanceOperationsRequest {
  string routing_instance_id = 1 [(required) = true, (length) = "<=50"];
  int64 page_size = 2;
  string page_token = 3;
}

message ListRoutingInstanceOperationsResponse {
  repeated operation.Operation operations = 1;
  string next_page_token = 2;
}
